Responsivness changes plus unit tests added